--- a/TripInU/Base.lproj/Main.storyboard
+++ b/TripInU/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oiA-vS-G8x">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="i1l-HT-nG8">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -11,7 +11,7 @@
         <!--홈-->
         <scene sceneID="cZ0-9f-P87">
             <objects>
-                <viewController id="9b3-M3-NcE" customClass="HomeViewController" customModule="TripInU" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" id="9b3-M3-NcE" customClass="HomeViewController" customModule="TripInU" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LYC-N2-tCh">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -31,57 +31,29 @@
                     <view key="view" contentMode="scaleToFill" id="I5b-6e-Vi8">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rzc-yE-Psj">
-                                <rect key="frame" x="180.66666666666666" y="159" width="32" height="34"/>
-                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qfe-FG-Mrg">
-                                <rect key="frame" x="180.66666666666666" y="293" width="32" height="34"/>
-                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZW-eZ-uZb">
-                                <rect key="frame" x="159" y="439" width="75" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                <connections>
-                                    <action selector="loginButtonTapped:" destination="oiA-vS-G8x" eventType="touchUpInside" id="UGn-yl-nuy"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fp0-Vs-n96">
-                                <rect key="frame" x="175.66666666666666" y="526" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="cLy-ft-Qos"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="Qfe-FG-Mrg" firstAttribute="centerX" secondItem="I5b-6e-Vi8" secondAttribute="centerX" id="2B1-fs-hKD"/>
-                            <constraint firstItem="rzc-yE-Psj" firstAttribute="top" secondItem="cLy-ft-Qos" secondAttribute="top" constant="100" id="7g1-os-LVf"/>
-                            <constraint firstItem="Qfe-FG-Mrg" firstAttribute="top" secondItem="rzc-yE-Psj" secondAttribute="bottom" constant="100" id="A6t-k0-cEM"/>
-                            <constraint firstItem="fp0-Vs-n96" firstAttribute="centerX" secondItem="I5b-6e-Vi8" secondAttribute="centerX" id="Lhy-Sk-BPo"/>
-                            <constraint firstItem="fp0-Vs-n96" firstAttribute="top" secondItem="aZW-eZ-uZb" secondAttribute="bottom" constant="52" id="TS0-dy-pGa"/>
-                            <constraint firstItem="rzc-yE-Psj" firstAttribute="centerX" secondItem="I5b-6e-Vi8" secondAttribute="centerX" id="e8w-wk-08g"/>
-                            <constraint firstItem="aZW-eZ-uZb" firstAttribute="top" secondItem="Qfe-FG-Mrg" secondAttribute="bottom" constant="112" id="kXh-jx-Pg6"/>
-                            <constraint firstItem="aZW-eZ-uZb" firstAttribute="centerX" secondItem="I5b-6e-Vi8" secondAttribute="centerX" id="oDg-L6-z6r"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="emailLabel" destination="fp0-Vs-n96" id="arB-kR-Xbc"/>
-                        <outlet property="emailTextField" destination="rzc-yE-Psj" id="mGX-Fn-m3S"/>
-                        <outlet property="loginButton" destination="aZW-eZ-uZb" id="TJx-91-GSv"/>
-                        <outlet property="passwordTextField" destination="Qfe-FG-Mrg" id="iuA-6r-ogn"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="sUn-wp-ytE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tGE-2H-mnG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1514" y="-998"/>
+            <point key="canvasLocation" x="-588.54961832061065" y="-998.59154929577471"/>
+        </scene>
+        <!--Sign Up View Controller-->
+        <scene sceneID="BPu-8x-nPc">
+            <objects>
+                <viewController id="OIL-z1-jGx" customClass="SignUpViewController" customModule="TripInU" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Ou-Ut-Wmu">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ICN-eU-YFi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gYq-KC-MON" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="132" y="-1030"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="HHr-H8-60u">
@@ -168,17 +140,29 @@
             </objects>
             <point key="canvasLocation" x="569" y="658"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BbP-Fv-5py">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i1l-HT-nG8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="phi-JJ-eYZ">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oiA-vS-G8x" kind="relationship" relationship="rootViewController" id="9HO-ZG-WOi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c8a-iG-4vL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1515.2671755725189" y="-998.59154929577471"/>
+        </scene>
     </scenes>
     <resources>
         <image name="checklist" catalog="system" width="128" height="107"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="person" catalog="system" width="128" height="121"/>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
